# hidmap

./: README.md  config.h.in  configure.ac
src/: Makefile.am  hidmap.c  hidmap.h  keymap.h  systemd_kodi.c  systemd_kodi.h  systemd_xbmc.c  vc_tvservice.c  vc_tvservice.h
